# AeroCore-V

./: .gitignore  LICENSE  README.md
.github/workflows/: verilator.yml
fpga/de10_standard/: de10.qpf  de10.qsf  de10.sdc  de10_top.sv
fpga/scripts/: build.tcl  clean.sh  program.sh
rtl/: soc_top.sv
rtl/cache/: cache_mem.sv  l1_controller.sv  l2_controller.sv
rtl/core/: alu_pid.sv  decode.sv  execute.sv  fetch.sv  regfile.sv  riscv_core.sv  riscv_pkg.sv
rtl/mmu/: ptw.sv  tlb.sv
rtl/peripherals/: i2c_wrappers.sv  spi_wrappers.sv  uart.sv
sim/: CMakeLists.txt
sim/digital_twin/: bridge.cpp  physics_engine.cpp  physics_engine.h  visualizer.cpp  visualizer.h
sim/tests/: Makefile  alu_test.s  i2c_sensor_read.c  mmu_test.s  pid_extension_test.c  uart_loopback_test.c
sim/verilator/: Makefile  digital_twin  main_tb.cpp  run_test  run_test_baseline  run_test_baseline2  run_test_baseline3
sim/verilator/obj_dir_baseline/: Vsoc_top.cpp  Vsoc_top.h  Vsoc_top.mk  Vsoc_top__ALL.cpp  Vsoc_top__ALL.d  Vsoc_top__ConstPool__0__Slow.cpp  Vsoc_top__Syms.h  Vsoc_top__Syms__Slow.cpp  Vsoc_top__TraceDecls__0__Slow.cpp  Vsoc_top__Trace__0.cpp  Vsoc_top__Trace__0__Slow.cpp  Vsoc_top___024root.h  Vsoc_top___024root__0.cpp  Vsoc_top___024root__0__Slow.cpp  Vsoc_top__ver.d  Vsoc_top_classes.mk
sw/: Makefile
sw/bootloader/: linker.ld  start.S
sw/kernel/: pid.c  riscv_asm.h  sched.c  traps.c
sw/tools/: elf2hex.py
sw/user/: telemetry_task.c
